Archive2/87/9f4ab3340b5ce6/output
main.cpp: In function 'int main()':
main.cpp:78:23: error: binding 'const int' to reference of type 'int&' discards qualifiers
  int& nci = *nc.begin();
                       ^
